--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <body>
 	<div class="container">
 		<div class="for_opacity">
-			<div class="img_div"><img src="images/img_01.jpg"></div>
-			<div class="img_div"><img src="images/img_02.jpg"></div>
-			<div class="img_div"><img src="images/img_03.jpg"></div>
+			<div class="img_div"><img src="https://user-images.githubusercontent.com/36048458/36931678-1276b922-1e70-11e8-9277-6e5cbd1fd090.jpg"></div>
+			<div class="img_div"><img src="https://user-images.githubusercontent.com/36048458/36931689-2594fe74-1e70-11e8-9b31-517dca934b1c.jpg"></div>
+			<div class="img_div"><img src="https://user-images.githubusercontent.com/36048458/36931693-3384ca6e-1e70-11e8-8a99-fd6853ed15e8.jpg"></div>
 		</div>
 	</div>
 
